nav bar updated

--- a/Assets/index.style.css
+++ b/Assets/index.style.css
@@ -14,42 +14,67 @@
 .main{
     background-color: var(--lightgreen);
 }
-/* Navbar */
-.container {
-  height: 80px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background-color: var(--melon);
-  font-size: 1.5rem;
-}
-.header-logo {
-  text-decoration: none;
-  margin-left: 40px;
-  color: var(--green);
-  font-weight: bold;
-  font-family: "Anton", sans-serif;
-}
-.header-logo img{
-  height: 65px;
-}
-.navbar {
-  margin-right: 40px;
-}
-.navlist {
+
+/***************
+*** Defaults ***
+***************/
+
+li {
   list-style: none;
+  cursor: pointer;
 }
-.navlist li {
-  margin: 0px 20px;
-  float: left;
-}
-.navlist li a {
-    font-family: "Roboto", sans-serif;
+
+a {
   text-decoration: none;
-  color: var(--redwood);
+  color: #000;
+  cursor: pointer;
 }
-.navlist li .active{
-    color: var(--green);
+
+#active {
+  color: #7ab854;
+}
+
+/* Navbar */
+nav {
+  width: 100%;
+  height: 10vh;
+  background-color: #ffd2d2;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+nav main {
+  width: 95%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 100%;
+}
+
+.nav-logo {
+  width: 150px;
+}
+
+nav ul {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 50%;
+}
+
+nav ul li {
+  font-size: 18px;
+  font-weight: 700;
+  font-family: "Inter", sans-serif;
+}
+
+nav ul li a {
+  color: #D00000;
+}
+
+nav ul li img {
+  width: 40px;
 }
 
 /* main contents */
